--- a/Lica.html
+++ b/Lica.html
@@ -42,24 +42,24 @@
     <ul>
       <li><a href="top.html">top</a></li>
       <li><a href="work.html">work</a>
-        <ul class="sitemap">
-          <li><a href="1999.html">1999</a></li>
-          <li><a href="2000.html">2000</a></li>
-          <li><a href="2001.html">2001</a></li>
-          <li><a href="2002.html">2002</a></li>
-        </ul>
-        <ul class="sitemap">
-          <li><a href="2003.html">2003</a></li>
-          <li><a href="2003.html">2004</a></li>
-          <li><a href="2003.html">2005</a></li>
-          <li><a href="2003.html">2008</a></li>
-        </ul>
-        <ul class="sitemap">
-          <li><a href="2003.html">2010</a></li>
-          <li><a href="2003.html">2011</a></li>
-          <li><a href="2003.html">2012</a></li>
-          <li><a href="2003.html">2013</a></li>
-        </ul>
+        <!--<ul class="sitemap">-->
+        <!--  <li><a href="1999.html">1999</a></li>-->
+        <!--  <li><a href="2000.html">2000</a></li>-->
+        <!--  <li><a href="2001.html">2001</a></li>-->
+        <!--  <li><a href="2002.html">2002</a></li>-->
+        <!--</ul>-->
+        <!--<ul class="sitemap">-->
+        <!--  <li><a href="2003.html">2003</a></li>-->
+        <!--  <li><a href="2003.html">2004</a></li>-->
+        <!--  <li><a href="2003.html">2005</a></li>-->
+        <!--  <li><a href="2003.html">2008</a></li>-->
+        <!--</ul>-->
+        <!--<ul class="sitemap">-->
+        <!--  <li><a href="2003.html">2010</a></li>-->
+        <!--  <li><a href="2003.html">2011</a></li>-->
+        <!--  <li><a href="2003.html">2012</a></li>-->
+        <!--  <li><a href="2003.html">2013</a></li>-->
+        <!--</ul>-->
       </li>
       <li><a href="exhbition.html">exhbition</a></li>
       <li><a href="profile.html">profile</a></li>
