--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
+
 <html lang="ja">
 
 <head>
   <meta charset="utf-8">
-  <title>sample</title>
+  <title>Lica Jozaki</title>
+  <link rel="stylesheet" href="css/Lica.css">
+  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-  <P>Hello!!</P>
+  <div id="logo">
+    <p>Lica Jozaki</p>
+  </div>
+
+  <div id="contents">
+    <div id="slideshow"></div>
+  </div>
+  <div id="global-nav">
+    <nav>
+      <ul>
+        <li id="top"><a href="index.html">top</a></li>
+        <li id="work"><a href="work.html">work</a>
+          <ul id="submenu">
+            <li class="dropdown"><a href="#">1999</a></li>
+            <li class="dropdown"><a href="#">2000</a></li>
+            <li class="dropdown"><a href="#">2001</a></li>
+            <li class="dropdown"><a href="#">2002</a></li>
+          </ul>
+        </li>
+        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>
+        <li id="profile"><a href="profile.html">profile</a></li>
+        <li id="contact"><a href="contact.html">contact</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <div id="fotter">
+<!--
+    <p>サイトマップ</p>
+    <ul>
+      <li><a href="top.html">top</a></li>
+      <li><a href="work.html">work</a>
+          <ul class="sitemap">
+            <li><a href="1999.html">1999</a></li>
+            <li><a href="2000.html">2000</a></li>
+            <li><a href="2001.html">2001</a></li>
+            <li><a href="2002.html">2002</a></li>
+          </ul>
+          <ul class="sitemap">
+            <li><a href="2003.html">2003</a></li>
+            <li><a href="2003.html">2004</a></li>
+            <li><a href="2003.html">2005</a></li>
+            <li><a href="2003.html">2008</a></li>
+          </ul>
+          <ul class="sitemap">
+            <li><a href="2003.html">2010</a></li>
+            <li><a href="2003.html">2011</a></li>
+            <li><a href="2003.html">2012</a></li>
+            <li><a href="2003.html">2013</a></li>
+          </ul>
+      </li>
+      <li><a href="exhbition.html">exhbition</a></li>
+      <li><a href="profile.html">profile</a></li>
+      <li><a href="contact.html">contact</a></li>
+    </ul>
+-->
+
+  </div>
+
 </body>
+
 </html>
