--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,14 @@
   </div>
 
   <div id="contents">
-    <div id="slideshow"></div>
+    <p>profile</p>
+    <ul>
+      <li>1981 福岡生まれ</li>
+      <li>グループ展</li>
+      <li>イロドリ展</li>
+      <li>2人展</li>
+      <li>個展</li>
+    </ul>
   </div>
   <div id="global-nav">
     <nav>
