--- a/base.html
+++ b/base.html
@@ -16,12 +16,12 @@
   </div>
 
   <div id="contents">
-    <div id="slideshow"></div>
+
   </div>
   <div id="global-nav">
     <nav>
       <ul>
-        <li id="top"><a href="index.html">top</a></li>
+        <li id="top"><a href="top.html">top</a></li>
         <li id="work"><a href="work.html">work</a>
           <ul id="submenu">
             <li class="dropdown"><a href="#">1999</a></li>
@@ -30,7 +30,7 @@
             <li class="dropdown"><a href="#">2002</a></li>
           </ul>
         </li>
-<!--        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
+        <li id="ehbition"><a href="exhbition.html">exhbition</a></li>
         <li id="profile"><a href="profile.html">profile</a></li>
         <li id="contact"><a href="contact.html">contact</a></li>
       </ul>
