--- a/exhibition.html
+++ b/exhibition.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/Lica.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-  </head>
+</head>
 
 <body>
   <div id="logo">
@@ -16,12 +16,17 @@
   </div>
 
   <div id="contents">
-
+    <ul>
+      <li>グループ展</li>
+      <li>イロドリ展</li>
+      <li>2人展</li>
+      <li>個展</li>
+    </ul>
   </div>
   <div id="global-nav">
     <nav>
       <ul>
-        <li id="top"><a href="top.html">top</a></li>
+        <li id="top"><a href="index.html">top</a></li>
         <li id="work"><a href="work.html">work</a>
           <ul id="submenu">
             <li class="dropdown"><a href="#">1999</a></li>
@@ -30,7 +35,7 @@
             <li class="dropdown"><a href="#">2002</a></li>
           </ul>
         </li>
-        <li id="ehbition"><a href="exhbition.html">exhbition</a></li>
+        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>
         <li id="profile"><a href="profile.html">profile</a></li>
         <li id="contact"><a href="contact.html">contact</a></li>
       </ul>
@@ -38,36 +43,38 @@
   </div>
 
   <div id="fotter">
+<!--
     <p>サイトマップ</p>
     <ul>
       <li><a href="top.html">top</a></li>
       <li><a href="work.html">work</a>
-        <!--<ul class="sitemap">-->
-        <!--  <li><a href="1999.html">1999</a></li>-->
-        <!--  <li><a href="2000.html">2000</a></li>-->
-        <!--  <li><a href="2001.html">2001</a></li>-->
-        <!--  <li><a href="2002.html">2002</a></li>-->
-        <!--</ul>-->
-        <!--<ul class="sitemap">-->
-        <!--  <li><a href="2003.html">2003</a></li>-->
-        <!--  <li><a href="2003.html">2004</a></li>-->
-        <!--  <li><a href="2003.html">2005</a></li>-->
-        <!--  <li><a href="2003.html">2008</a></li>-->
-        <!--</ul>-->
-        <!--<ul class="sitemap">-->
-        <!--  <li><a href="2003.html">2010</a></li>-->
-        <!--  <li><a href="2003.html">2011</a></li>-->
-        <!--  <li><a href="2003.html">2012</a></li>-->
-        <!--  <li><a href="2003.html">2013</a></li>-->
-        <!--</ul>-->
+          <ul class="sitemap">
+            <li><a href="1999.html">1999</a></li>
+            <li><a href="2000.html">2000</a></li>
+            <li><a href="2001.html">2001</a></li>
+            <li><a href="2002.html">2002</a></li>
+          </ul>
+          <ul class="sitemap">
+            <li><a href="2003.html">2003</a></li>
+            <li><a href="2003.html">2004</a></li>
+            <li><a href="2003.html">2005</a></li>
+            <li><a href="2003.html">2008</a></li>
+          </ul>
+          <ul class="sitemap">
+            <li><a href="2003.html">2010</a></li>
+            <li><a href="2003.html">2011</a></li>
+            <li><a href="2003.html">2012</a></li>
+            <li><a href="2003.html">2013</a></li>
+          </ul>
       </li>
       <li><a href="exhbition.html">exhbition</a></li>
       <li><a href="profile.html">profile</a></li>
       <li><a href="contact.html">contact</a></li>
     </ul>
-    <p>copy right</p>
+-->
+
   </div>
-  
+
 </body>
 
 </html>
