--- a/profile.html
+++ b/profile.html
@@ -19,10 +19,10 @@
     <p>profile</p>
     <ul>
       <li>1981 福岡生まれ</li>
-      <li>グループ展</li>
-      <li>イロドリ展</li>
-      <li>2人展</li>
-      <li>個展</li>
+      <li>2011 ビタミンアート展参加</li>
+      <li>2011 イロドリ展</li>
+      <li>2011 2人展</li>
+      <li>2012 個展</li>
     </ul>
   </div>
   <div id="global-nav">
