--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,25 @@
   </div>
 
   <div id="contents">
-    <div id="slideshow"></div>
+    <form action="#">
+      <ul>
+        <li class="name">
+          <label for="name">name</label>
+          <input id="name" type="text" required placeholder="お名前を入力してください" size="60">
+        </li>
+        <li class="email">
+          <label for="email">email</label>
+          <input type="email" name="email" required placeholder="info@example.com" size="60">
+        </li>
+        <li class="msg">
+          <label for="msg">message</label>
+          <textarea id="msg" name="message" size="60" placeholder="message"></textarea>
+        </li>
+        <li>
+          <input id="button" type="submit">
+        </li>
+      </ul>
+    </form>
   </div>
   <div id="global-nav">
     <nav>
@@ -37,7 +55,7 @@
             <li class="dropdown"><a href="1999.html">1999</a></li>
           </ul>
         </li>
-<!--        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
+        <!--                <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
         <li id="profile"><a href="profile.html">profile</a></li>
         <li id="contact"><a href="contact.html">contact</a></li>
       </ul>
@@ -45,7 +63,7 @@
   </div>
 
   <div id="fotter">
-<!--
+    <!--
     <p>サイトマップ</p>
     <ul>
       <li><a href="top.html">top</a></li>
