--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,16 @@
   </div>
 
   <div id="contents">
-    <div id="slideshow"></div>
+    <div id="prf">
+      <p>profile</p>
+      <ul>
+        <li>1981 福岡生まれ</li>
+        <li>2011 ビタミンアート展参加</li>
+        <li>2011 グループ展-イロドリ展</li>
+        <li>2011 2人展-Serendipity</li>
+        <li>2011 個展-Part of L-</li>
+      </ul>
+    </div>
   </div>
   <div id="global-nav">
     <nav>
@@ -37,7 +46,7 @@
             <li class="dropdown"><a href="1999.html">1999</a></li>
           </ul>
         </li>
-<!--        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
+        <!--        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
         <li id="profile"><a href="profile.html">profile</a></li>
         <li id="contact"><a href="contact.html">contact</a></li>
       </ul>
@@ -45,7 +54,7 @@
   </div>
 
   <div id="fotter">
-<!--
+    <!--
     <p>サイトマップ</p>
     <ul>
       <li><a href="top.html">top</a></li>
