--- a/2013.html
+++ b/2013.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/Lica.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <script src="js/jquery-2.1.4.js"></script>
+  <script src="js/Lica.js"></script>
 </head>
 
 <body>
@@ -16,12 +18,33 @@
   </div>
 
   <div id="contents">
-    <div id="slideshow"></div>
+    <!--
+      サムネイル画像にclass=”ChangePhoto”を指定します。
+切り替えるメイン画像にid=”MainPhoto”を指定します。
+サムネイル画像をクリックすると、メイン画像のURLとalt属性をサムネイルと同じものに差し替えます。
+-->
+    <div class="wrap">
+      <p><img src="images/2013%20eohemera%207-h450.jpg" alt="" id="MainPhoto"></p>
+      <ul>
+        <img src="images/2013%20eohemera%207-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemara%2017-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemera%20---h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemera%2011-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemera%2012-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemera%2013-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemera%2014-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemera%209-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemera%20---h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20eohemera%207-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemara%2017-h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+        <img src="images/2013%20ephemera%20---h450.jpg" width="70px" alt="" class="ChangePhoto"></li>
+      </ul>
+    </div>
   </div>
   <div id="global-nav">
     <nav>
       <ul>
-        <li id="top"><a href="index.html">top</a></li>
+        <li id="index.html"><a href="index.html">top</a></li>
         <li id="work"><a href="work.html">work</a>
           <ul id="submenu">
             <li class="dropdown"><a href="2013.html">2013</a></li>
@@ -37,7 +60,7 @@
             <li class="dropdown"><a href="1999.html">1999</a></li>
           </ul>
         </li>
-<!--        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
+        <!--                <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
         <li id="profile"><a href="profile.html">profile</a></li>
         <li id="contact"><a href="contact.html">contact</a></li>
       </ul>
@@ -45,7 +68,7 @@
   </div>
 
   <div id="fotter">
-<!--
+    <!--
     <p>サイトマップ</p>
     <ul>
       <li><a href="top.html">top</a></li>
