--- a/exhibition.html
+++ b/exhibition.html
@@ -16,7 +16,12 @@
   </div>
 
   <div id="contents">
-    <div id="slideshow"></div>
+    <ul>
+      <li>グループ展</li>
+      <li>イロドリ展</li>
+      <li>2人展</li>
+      <li>個展</li>
+    </ul>
   </div>
   <div id="global-nav">
     <nav>
@@ -24,20 +29,13 @@
         <li id="top"><a href="index.html">top</a></li>
         <li id="work"><a href="work.html">work</a>
           <ul id="submenu">
-            <li class="dropdown"><a href="2013.html">2013</a></li>
-            <li class="dropdown"><a href="2012.html">2012</a></li>
-            <li class="dropdown"><a href="2011.html">2011</a></li>
-            <li class="dropdown"><a href="2010.html">2010</a></li>
-            <li class="dropdown"><a href="2008.html">2008</a></li>
-            <li class="dropdown"><a href="2005.html">2005</a></li>
-            <li class="dropdown"><a href="2003.html">2003</a></li>
-            <li class="dropdown"><a href="2002.html">2002</a></li>
-            <li class="dropdown"><a href="2001.html">2001</a></li>
-            <li class="dropdown"><a href="2000.html">2000</a></li>
-            <li class="dropdown"><a href="1999.html">1999</a></li>
+            <li class="dropdown"><a href="#">1999</a></li>
+            <li class="dropdown"><a href="#">2000</a></li>
+            <li class="dropdown"><a href="#">2001</a></li>
+            <li class="dropdown"><a href="#">2002</a></li>
           </ul>
         </li>
-<!--        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
+        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>
         <li id="profile"><a href="profile.html">profile</a></li>
         <li id="contact"><a href="contact.html">contact</a></li>
       </ul>
