--- a/work.html
+++ b/work.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/Lica.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <script src="js/jquery-2.1.4.js"></script>
+  <script src="js/Lica.js"></script>
 </head>
 
 <body>
@@ -16,12 +18,65 @@
   </div>
 
   <div id="contents">
-    <div id="slideshow"></div>
+    <!--
+    <div id="work"><img src="images/slideshow1.jpg"></div>
+    <div id="navi">
+      <ul>
+        <li><a href="images/slideshow1.jpg"><img  src="images/slideshow1-s.jpg"</a></li>
+        <li><a href="images/slideshow2.jpg"><img  src="images/slideshow2-s.jpg"</a></li>
+        <li><a href="images/slideshow3.jpg"><img  src="images/slideshow3-s.jpg"</a></li>
+      </ul>
+    </div>
+-->
+    <!--nekonotoko
+    <div id="full">
+<img src="images/slideshow1.jpg">
+</div>
+
+<ul id="thumb">
+<li><img src="images/slideshow1-s.jpg"></li>
+<li><img src="images/slideshow2-s.jpg"></li>
+<li><img src="images/slideshow3-s.jpg"></li>
+-->
+
+    <!--
+<li><img src="/img/thumb04.jpg"></li>
+<li><img src="/img/thumb05.jpg"></li>
+-->
+    <!--
+ </ul>
+    <div class="target_img">
+      <img src="images/slideshow1.jpg">
+    </div>
+    <div class="thumb_img">
+      <ul>
+        <li>
+          <a href="images/slideshow1.jpg"><img src="images/slideshow1-s.jpg"></a></li>
+        <li>
+          <a href="images/slideshow2.jpg"><img src="images/slideshow2-s.jpg"></a></li>
+        <li>
+          <a href="images/slideshow3.jpg"><img src="images/slideshow3-s.jpg"></a></li>
+      </ul>
+    </div>
+-->
+
+
+    <div class="wrap">
+
+      <p id="image"><img src="images/slideshow1.jpg" id="MainPhoto"></p>
+      <ul>
+        <li><img src="images/slideshow1.jpg" width="72" alt="下筌ダム" class="ChangePhoto"></li>
+        <li><img src="images/slideshow2.jpg" width="72" alt="石打ダム" class="ChangePhoto"></li>
+        <li><img src="images/slideshow3.jpg" width="72" alt="船津ダム" class="ChangePhoto"></li>
+      </ul>
+    </div>
+
+
   </div>
   <div id="global-nav">
     <nav>
       <ul>
-        <li id="top"><a href="index.html">top</a></li>
+        <li id="index.html"><a href="index.html">top</a></li>
         <li id="work"><a href="work.html">work</a>
           <ul id="submenu">
             <li class="dropdown"><a href="2013.html">2013</a></li>
@@ -45,7 +100,7 @@
   </div>
 
   <div id="fotter">
-<!--
+    <!--
     <p>サイトマップ</p>
     <ul>
       <li><a href="top.html">top</a></li>
