--- a/worktop.html
+++ b/worktop.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/Lica.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <script src="js/jquery-2.1.4.js"></script>
+  <script src="js/Lica.js"></script>
 </head>
 
 <body>
@@ -16,12 +18,28 @@
   </div>
 
   <div id="contents">
-    <div id="slideshow"></div>
+
+
+    <div class="wrap">
+      <ul id="worktop">
+        <li>2013</li>
+        <li>2012</li>
+        <li>2011</li>
+        <li>2010</li>
+        <li>2008</li>
+        <li>2005</li>
+        <li>2003</li>
+        <li>2002</li>
+        <li>2001</li>
+        <li>1999</li>
+      </ul>
+    </div>
   </div>
+  
   <div id="global-nav">
     <nav>
       <ul>
-        <li id="top"><a href="index.html">top</a></li>
+        <li id="index.html"><a href="index.html">top</a></li>
         <li id="work"><a href="work.html">work</a>
           <ul id="submenu">
             <li class="dropdown"><a href="2013.html">2013</a></li>
@@ -37,7 +55,7 @@
             <li class="dropdown"><a href="1999.html">1999</a></li>
           </ul>
         </li>
-<!--        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>-->
+        <li id="exhibition"><a href="exhibition.html">exhibition</a></li>
         <li id="profile"><a href="profile.html">profile</a></li>
         <li id="contact"><a href="contact.html">contact</a></li>
       </ul>
@@ -45,7 +63,7 @@
   </div>
 
   <div id="fotter">
-<!--
+    <!--
     <p>サイトマップ</p>
     <ul>
       <li><a href="top.html">top</a></li>
