--- a/profile.html
+++ b/profile.html
@@ -22,14 +22,15 @@
     <div id="prf">
       <p>profile</p>
       <ul class="tabs">
+        <li>2003 熊谷守一大賞展 賞候補</li>
         <li>2011 ビタミンアート展参加</li>
         <li>2011 グループ展-イロドリ展</li>
         <li>2011 2人展-Serendipity</li>
-        <li>2011 個展-Part of L-</li>
+        <li>2012 個展-Part of L-</li>
       </ul>
     </div>
   </div>
-  
+    
   <div id="global-nav">
     <nav>
       <ul>
