--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,14 @@
     </nav>
   </div>
 
+  <div id="fotter">
+    <hr>
+    <ul>
+      <li>Copyright Lica Jozaki All Rights Reserved.</li>
+      <li>無断コピー, 転載禁止</li>
+    </ul>
+  </div>
+
 </body>
 
 </html>
