--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
       </ul>
     </div>
   </div>
-    
+
   <div id="global-nav">
     <nav>
       <ul>
@@ -41,6 +41,14 @@
         <li id="contact"><a href="contact.html">contact</a></li>
       </ul>
     </nav>
+  </div>
+
+  <div id="fotter">
+    <hr>
+    <ul>
+      <li>Copyright Lica Jozaki All Rights Reserved.</li>
+      <li>無断コピー, 転載禁止</li>
+    </ul>
   </div>
 
 
