wark_tab changed
wark_tabのimgをディスプレイに合わせて変えられるようにしました。ポイントは可変にしたいimgのcssをmax-width
100%とmax-height 100%で指定することです。

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Lica Jozaki</p>
   </div>
 
-  <div id="contents">
+  <div id="contents" class="top-slide">
     <div id="empty"></div>
     <div id="slideshow"></div>
   </div>
