--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
           <textarea id="msg" name="message" size="60" placeholder="message"></textarea>
         </li>
         <li>
-          <input id="button" type="submit">
+          <input id="button" type="submit" value="送信">
         </li>
       </ul>
     </form>
