--- a/profile.html
+++ b/profile.html
@@ -22,11 +22,12 @@
     <div id="prf">
       <p>profile</p>
       <ul class="tabs">
-        <li>2003 熊谷守一大賞展 賞候補</li>
-        <li>2011 ビタミンアート展参加</li>
-        <li>2011 グループ展-イロドリ展</li>
-        <li>2011 2人展-Serendipity</li>
-        <li>2012 個展-Part of L-</li>
+        <li>2003   熊谷守一大賞展  賞候補</li>
+        <li>2005   熊谷守一大賞展  入選</li>
+        <li>2011   「ビタミンアート展」  参加</li>
+        <li>2011   「イロドリ展」  グループ展 </li>
+        <li>2011   「Serendipity」  2人展</li>
+        <li>2012   「Part of L」  個展</li>
       </ul>
     </div>
   </div>
